<resources>
    <string name="app_name">EnSark Bank</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="customer_name">Customer Name</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_debit">Total Debit</string>
    <string name="total_credit">Total Credit</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="transfer">Transfer</string>
    <string name="bills">Bills</string>
    <string name="refill">Refill</string>
    <string name="more">More</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See All</string>
    <string name="transaction_history">Transaction History</string>
    <string name="showing_recent_activities">Showing all recent activities</string>
    <string name="all">All</string>
    <string name="debits">Debits</string>
    <string name="credits">Credits</string>
    <string name="currency_format">$ %s</string>
    <string name="welcome_back_title">Welcome Back</string>
    <string name="login_subtitle">Login to your secure bank account</string>
    <string name="new_user_prompt">New user? </string>
    <string name="create_account">Create Account</string>
    <string name="join_today">Join EnSark Bank today</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="send_money">Send Money</string>
    <string name="ensark_transfer">EnSark Account Transfer</string>
    <string name="other_bank_transfer">Other Bank Transfer (BEFTN/NPSB)</string>
    <string name="card_controls">Card Controls</string>
    <string name="online_transactions">Online Transactions</string>
    <string name="international_usage">International Usage</string>
    <string name="personal_info">Personal Information</string>
    <string name="phone_label">Phone</string>
    <string name="logout">Logout</string>
    <string name="register_title">Let\'s get started</string>
    <string name="register_subtitle">Fill in your details to create a secure bank account</string>
    <string name="personal_details_label">Personal Details</string>
    <string name="gender_label">Gender</string>
    <string name="dob_label">Date of Birth</string>
    <string name="occupation_label">Occupation</string>
    <string name="contact_security_label">Contact &amp; Security</string>
    <string name="create_password_label">Create Password</string>
    <string name="present_address_label">Present Address</string>
    <string name="holding_no_label">Holding No / House Name</string>
    <string name="area_road_label">Area / Road</string>
    <string name="postal_code_label">Postal Code</string>
    <string name="continue_to_kyc">Continue to KYC</string>
</resources>
